reset password complete and send otp for mail verification

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,3 +78,31 @@ body {
   background: url("../src/assets/Images/bghome.svg");
   width: 100vw;
 }
+
+  /* HTML: <div class="loader"></div> */
+.loader {
+  width: 60px;
+  height: 16px;
+  display: flex;
+  justify-content: space-between;
+  animation: l3-0 2s infinite alternate;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  width: 16px;
+  background: #3FB8AF;
+  animation: l3-1 1s infinite alternate;
+}
+.loader:after {
+  background: #FF3D7F;
+  --s:-1;
+}
+@keyframes l3-0 {
+   0%,40%   {transform: rotate(0)}
+   80%,100% {transform: rotate(.5turn)}
+}
+@keyframes l3-1 {
+   80%,100% {transform: translate(calc(var(--s,1)*14px))}
+}
+
