--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,7 +79,7 @@ body {
   width: 100vw;
 }
 
-  /* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> */
 .loader {
   width: 60px;
   height: 16px;
@@ -91,18 +91,26 @@ body {
 .loader:after {
   content: "";
   width: 16px;
-  background: #3FB8AF;
+  background: #3fb8af;
   animation: l3-1 1s infinite alternate;
 }
 .loader:after {
-  background: #FF3D7F;
-  --s:-1;
+  background: #ff3d7f;
+  --s: -1;
 }
 @keyframes l3-0 {
-   0%,40%   {transform: rotate(0)}
-   80%,100% {transform: rotate(.5turn)}
+  0%,
+  40% {
+    transform: rotate(0);
+  }
+  80%,
+  100% {
+    transform: rotate(0.5turn);
+  }
 }
 @keyframes l3-1 {
-   80%,100% {transform: translate(calc(var(--s,1)*14px))}
+  80%,
+  100% {
+    transform: translate(calc(var(--s, 1) * 14px));
+  }
 }
-
